--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,9 @@ jobs:
         - name: Create wallet file
           run: |
             WALLET=$(mktemp)
+            cat WALLET_SEED
             ardrive generate-wallet -s WALLET_SEED > $WALLET
+            cat $WALLET
         - name: Build Project
           run: yarn build
         - name: Create new Folder
