--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         - run:  npm i -g ardrive-cli
         - name: Create wallet file
           run: |
-            WALLET=$(mktemp -t wallet.json)
+            WALLET=$(mktemp -t wallet.XXXXXXXXXX.json)
             ardrive generate-wallet -s $WALLET_SEED > $WALLET
             cat $WALLET
         - name: Build Project
