--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         - run:  npm i -g ardrive-cli
         - name: Create wallet file
           run: |
-            ardrive generate-wallet -s $WALLET_SEED > wallet.json
+            ardrive generate-wallet -s WALLET_SEED > wallet.json
             cat $WALLET
         - name: Build Project
           run: yarn build
